fix(avaliacao): 3 bugs apanhados na bateria com a base limpa
Bateria refeita do zero (dados do modulo apagados), a percorrer os ecras como
um cliente e a confrontar cada resposta com as imagens da spec.

- notas sem validacao: aceitava -5 e 9999. Uma nota de 9999 produzia resultado
  1205 e classificacao nula. Passam a ser validadas contra NIVEIS_AVD, e todas
  antes de qualquer escrita para nao deixar o periodo meio gravado.

- PESO_COMPORTAMENTAIS / PESO_TECNICA eram gravados mas nunca usados no
  calculo. Como as duas familias de competencias somam 100% cada, juntas
  valiam 200% e a nota do periodo saia fora da escala (5.14 numa escala 0-5),
  ficando sem qualitativa. Aplicados: o mesmo caso passa a dar 3.78 -> BOM,
  conferido a mao.

- reenviar a definicao de objectivos comuns duplicava as avaliacoes (INPS 1->2,
  DIRECAO 2->4). O guard de idempotencia so existia para INDIVIDUAL; passa a
  valer para as tres abrangencias, com aviso em alertas.

Contrato (grelha de definicao vs image13):
- nomeColaborador/funId/funUuid, periodicidades[] e estadoDescricao, que o
  ecra mostra e a API nao devolvia
- filtro Unidade (?seccaoId=) que o ecra tem e era ignorado

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>